@@ -1,5 +1,5 @@
 /*
- *    Copyright 2016-2024 the original author or authors.
+ *    Copyright 2016-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 package org.mybatis.dynamic.sql.util.spring;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.jdbc.core.namedparam.SqlParameterSource;
 import org.springframework.jdbc.core.namedparam.SqlParameterSourceUtils;
@@ -35,20 +34,10 @@ public class BatchInsertUtility {
     public static <T> SqlParameterSource[] createBatch(List<T> rows) {
         List<RowHolder<T>> tt = rows.stream()
                 .map(RowHolder::new)
-                .collect(Collectors.toList());
+                .toList();
 
         return SqlParameterSourceUtils.createBatch(tt);
     }
 
-    public static class RowHolder<T> {
-        private final T row;
-
-        public RowHolder(T row) {
-            this.row = row;
-        }
-
-        public T getRow() {
-            return row;
-        }
-    }
+    public record RowHolder<T>(T row) {}
 }
